2016-06-16  Jakub Jelinek  <jakub@redhat.com>

	PR target/71554
	* config/i386/i386.md (setcc + movzbl peephole2): Use reg_set_p.
	(setcc + and peephole2): Likewise.

	Backported from mainline
	2015-04-29  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.md (setcc+movzbl peephole2): Check also clobbered
	reg.
	(setcc+andl peephole2): Ditto.

2016-06-15  Andreas Tobler  <andreast@gcc.gnu.org>

	Backported from mainline
	2016-06-14  Andreas Tobler  <andreast@gcc.gnu.org>

	* config/arm/freebsd.h: Only enable unaligned access for armv6 on
	FreeBSD 11 and above.

2016-06-13  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/71505
	* tree-vect-data-refs.c (vect_analyze_data_ref_accesses): Make
	assert match comment.

2016-06-13  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>

	Backport from mainline
	2016-06-13  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>

	PR target/71379
	* config/s390/s390.c (s390_expand_builtin): Increase MAX_ARGS by
	one.

2016-06-07  Peter Bergner  <bergner@vnet.ibm.com>

	Backport from mainline
	2016-06-07  Peter Bergner  <bergner@vnet.ibm.com>

	* doc/invoke.texi (RS/6000 and PowerPC Options): Document -mhtm and
	-mno-htm.

2016-06-07  Uros Bizjak  <ubizjak@gmail.com>

	PR target/71389
	* config/i386/i386.c (ix86_avx256_split_vector_move_misalign):
	Copy op1 RTX to avoid invalid sharing.
	(ix86_expand_vector_move_misalign): Ditto.

2016-06-05  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline
	2016-06-01  Uros Bizjak  <ubizjak@gmail.com>
		    Jocelyn Mayer  <l_indien@magic.fr>

	PR target/67310
	* config/i386/driver-i386.c (host_detect_local_cpu): Correctly
	detect processor family for signature_CENTAUR_ebx.
	<case PROCESSOR_I486>: Pass c3, winchip2 or winchip-c6 for
	signature_CENTAUR_ebx.
	<case PROCESSOR _PENTIUMPRO>: Pass c3-2 for signature_CENTAUR_ebx.
	<default>: Pass x86-64 for has_longmode.

2016-06-03  Andreas Tobler  <andreast@gcc.gnu.org>

	Backport from mainline